# Stromschlag

./: README.md  pyproject.toml
src/stromschlag/: __init__.py  __main__.py  app.py
src/stromschlag/core/: exporters.py  generator.py  models.py  project_io.py  theme_loader.py  utils.py
src/stromschlag/gui/: main_window.py
tests/: test_exporters.py  test_models.py  test_project_io.py  test_theme_loader.py
