[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stromschlag"
version = "0.1.0"
description = "GUI tool for crafting KDE Plasma and GNOME icon packs"
readme = "README.md"
authors = [
  { name = "br0sinski" }
]
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "github.com/br0sinski/Stromschlag"

[project.scripts]
stromschlag = "stromschlag.app:main"

[tool.setuptools.packages.find]
where = ["src"]
